fix bg noise home, add custom scrollbar, and many things hehe

--- a/app/globals.css
+++ b/app/globals.css
@@ -109,3 +109,40 @@ body {
     --radius: 0.5rem;
   }
 }
+
+/* Firefox (uncomment to work in Firefox, although other properties will not work!)  */
+/** {
+  scrollbar-width: thin;
+  scrollbar-color: #6C6C6C #343434;
+}*/
+
+/* Chrome, Edge and Safari */
+*::-webkit-scrollbar {
+  height: 10px;
+  width: 10px;
+}
+*::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #343434;
+}
+
+*::-webkit-scrollbar-track:hover {
+  background-color: #343434;
+}
+
+*::-webkit-scrollbar-track:active {
+  background-color: #343434;
+}
+
+*::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background-color: #6C6C6C;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+  background-color: #A3A3A3;
+}
+
+*::-webkit-scrollbar-thumb:active {
+  background-color: #A3A3A3;
+}
